--- a/src/components/Biz/KeywordsList/keywords.module.css
+++ b/src/components/Biz/KeywordsList/keywords.module.css
@@ -3,8 +3,9 @@
     min-height: 200px;
     border: 1px solid rgb(226, 226, 226);
     border-radius: 5px;
-    background-color: rgb(252, 252, 252);
+    text-align: start;
     padding: 10px;
+    background-color: rgb(252, 252, 252);
 }
 
 .content{
