--- a/src/components/UI/Input/input.module.css
+++ b/src/components/UI/Input/input.module.css
@@ -11,6 +11,7 @@
 .inputWrapper input{
     font-size: 18px;
     margin-top: 15px;
+    width: 230px;
     border-radius: 5px;
     border: 1px solid rgb(223, 223, 223);
     padding: 10px 10px 10px 10px;
