--- a/src/pages/Articles/articles.module.css
+++ b/src/pages/Articles/articles.module.css
@@ -1,13 +1,15 @@
 
 h1{
     padding: 0;
-    color: whitesmoke; 
+    color: black; 
     margin: 0;
     font-size: 22px;
     margin-left: 40px;
+    font-weight: 400;
 }
 .header{
-    background-color: rgb(112, 112, 112);
+    background-color: rgb(250, 250, 250);
+    border: 1px solid rgb(214, 214, 214);
     height: 60px;
     text-align: start;
     display: flex;
