--- a/src/pages/HomePage/homepage.module.css
+++ b/src/pages/HomePage/homepage.module.css
@@ -16,6 +16,16 @@ section{
     max-width: 550px;
 }
 
+.articles{
+    background-color: rgb(250, 250, 250);
+    height: 130px;
+    display: inherit;
+    margin-bottom: 200px;
+    padding: 10px 20px;
+    border: 1px solid rgb(214, 214, 214);
+    border-radius: 10px;
+}
+
 .wrapBtn{
     display: flex;
 }
