--- a/src/components/Biz/KeywordsList/keywords.module.css
+++ b/src/components/Biz/KeywordsList/keywords.module.css
@@ -16,3 +16,13 @@
     font-size: 20px;
     font-weight: 300;
 }
+
+@media only screen and (max-width: 420px) {
+    .wrappUl{
+     width: 320px;
+    }
+    .content{
+        justify-content: center;
+        align-items: center;
+    }
+ }
