--- a/src/components/Biz/TagList/taglist.module.css
+++ b/src/components/Biz/TagList/taglist.module.css
@@ -17,3 +17,13 @@
     font-size: 20px;
     font-weight: 300;
 }
+
+@media only screen and (max-width: 420px) {
+    .wrappUl{
+        width: 320px;
+    }
+    .content{
+        justify-content: center;
+        align-items: center;
+    }
+}
