--- a/src/components/UI/Input/input.module.css
+++ b/src/components/UI/Input/input.module.css
@@ -21,3 +21,18 @@
     font-size: 20px;
     font-weight: 300;
 }
+
+    
+@media only screen and (max-width: 420px) {
+    .inputWrapper input{
+        padding: 10px 40px 10px 40px;
+    }
+    .inputWrapper{
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: auto;
+    }
+}
+  
+  
