--- a/src/pages/GetbylinkPage/getbylinkpage.module.css
+++ b/src/pages/GetbylinkPage/getbylinkpage.module.css
@@ -1,4 +1,3 @@
-
 h1{
     padding: 0;
     color: black; 
@@ -14,6 +13,13 @@ h1{
     text-align: start;
     display: flex;
     justify-content: flex-start;
-    align-items: center ;
-    width: 100%;
+    align-items: center;
+}
+
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
 }
