--- a/src/pages/HomePage/homepage.module.css
+++ b/src/pages/HomePage/homepage.module.css
@@ -17,43 +17,53 @@ section{
 }
 
 .articles{
+    flex-direction: column;
+    text-align:flex-start;
+    display: flex;
     background-color: rgb(250, 250, 250);
     height: 130px;
-    display: inherit;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     padding: 10px 20px;
     border: 1px solid rgb(214, 214, 214);
     border-radius: 10px;
 }
 
 .wrapBtn{
-    display: flex;
-    
+    display: flex; 
 }
 
-
-
 .alerts{
-    position: absolute;
+    position: fixed;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     gap: 10px;
     top: 30px;
 }
 
 
-.alerts-enter {
-    opacity: 0;
-  }
-  .alerts-enter-active {
-    opacity: 1;
-    transition: opacity 500ms ease-in;
-  }
-  .alerts-exit {
-    opacity: 1;
-  }
-  .alerts-exit-active {
-    opacity: 0;
-    transition: opacity 500ms ease-in;
-  }
   
+@media only screen and (max-width: 420px) {
+  .wrapBtn{
+      flex-direction: column;
+  }
+  .content{
+      flex-wrap: wrap;
+  }
+  section{
+    height: auto;
+  }
+  section:first-child{
+    margin-bottom: 100px;
+  }
+  .wrappCreateArticle{
+    width: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .articles{
+    flex-direction: column;
+    text-align: center;
+    display: flex;
+    width: 80%;
+  }
+}
