--- a/src/pages/GetbylinkPage/getbylinkpage.module.css
+++ b/src/pages/GetbylinkPage/getbylinkpage.module.css
@@ -21,5 +21,15 @@ h1{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 100px;
 }
+
+
+@media only screen and (max-width: 420px) {
+ 
+    .title{
+        font-size: 15px;
+    }
+}
+
+
