--- a/src/pages/LoadvideoPage/loadvideo.module.css
+++ b/src/pages/LoadvideoPage/loadvideo.module.css
@@ -25,3 +25,11 @@ h1{
     padding-top: 100px;
 
 }
+
+@media only screen and (max-width: 420px) {
+ 
+    .title{
+        font-size: 15px;
+    }
+}
+
