--- a/src/components/UI/Button/button.module.css
+++ b/src/components/UI/Button/button.module.css
@@ -3,22 +3,22 @@ button {
     font-family: arial,sans-serif;
     font-size: 11px;
     font-weight: bold;
-    color: rgb(68,68,68);
     padding: 10px 20px;
     width: 250px;
     text-decoration: none;
     user-select: none;
     outline: none;
-    border: 1px solid rgba(0,0,0,.1);
+    color: rgb(109, 109, 109);
+    border: 1px solid rgb(223, 223, 223);
     border-radius: 2px;
-    background: rgb(245,245,245) linear-gradient(#f4f4f4, #f1f1f1);
+    background: #48dbfb linear-gradient(#c8d6e5);
     transition: all .218s ease 0s;
   }
   button:hover {
-    color: rgb(24,24,24);
+    color: rgb(68,68,68);
     border: 1px solid rgb(198,198,198);
-    background: #f7f7f7 linear-gradient(#f7f7f7, #f1f1f1);
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
+    background: rgb(245,245,245) linear-gradient(#f4f4f4, #f1f1f1);
     -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
