--- a/src/components/Biz/TagList/taglist.module.css
+++ b/src/components/Biz/TagList/taglist.module.css
@@ -4,7 +4,7 @@
     max-height: 200px;
     border: 1px solid rgb(226, 226, 226);
     border-radius: 5px;
-    background-color: rgb(252, 252, 252);
+    background-color: #E2E8F0;
     padding: 10px;
     overflow-y: scroll; 
 }
@@ -17,7 +17,9 @@
     font-size: 20px;
     font-weight: 300;
 }
-
+p{
+    color: black;
+}
 @media only screen and (max-width: 420px) {
     .wrappUl{
         width: 320px;
