--- a/src/components/UI/Button/button.module.css
+++ b/src/components/UI/Button/button.module.css
@@ -8,26 +8,24 @@ button {
     text-decoration: none;
     user-select: none;
     outline: none;
-    color: rgb(109, 109, 109);
-    border: 1px solid rgb(223, 223, 223);
-    border-radius: 2px;
-    background: #48dbfb linear-gradient(#c8d6e5);
+    color: #FFFFFF;
+    border-radius: 28px;
+    border: none;
+    background: #64748B;
     transition: all .218s ease 0s;
   }
   button:hover {
-    color: rgb(68,68,68);
-    border: 1px solid rgb(198,198,198);
+    color: #000000;
     box-shadow: 0 1px 2px rgba(0,0,0,.1);
-    background: rgb(245,245,245) linear-gradient(#f4f4f4, #f1f1f1);
+    background: #93C5FD;
     -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     
   }
   button:active {
-    color: rgb(51,51,51);
-    border: 1px solid rgb(204,204,204);
-    background: rgb(238,238,238) linear-gradient(rgb(238,238,238), rgb(224,224,224));
+    color: #94A3B8;
+    background: #E2E8F0;
     box-shadow: 0 1px 2px rgba(0,0,0,.1) inset;
   }
 
@@ -35,7 +33,8 @@ button {
     
 @media only screen and (max-width: 420px) {
   button {
-    width: auto;
+    width: 312px;
+    padding: 15px;
   }
 }
 
