--- a/src/components/UI/Input/input.module.css
+++ b/src/components/UI/Input/input.module.css
@@ -12,9 +12,11 @@
     font-size: 18px;
     margin-top: 15px;
     width: 230px;
-    border-radius: 2px;
-    border: 1px solid rgb(223, 223, 223);
+    border-radius: 28px;
     padding: 10px 10px 10px 10px;
+    background-color: #94A3B8;
+    border: none;
+    color: #f5f5f5
 }
 
 .inputWrapper label{
