--- a/src/components/UI/Subtitle/subtitle.module.css
+++ b/src/components/UI/Subtitle/subtitle.module.css
@@ -1,14 +1,13 @@
 h1{
     padding: 0;
-    color: black; 
+    color: rgb(245, 245, 245); 
     margin: 0;
     font-size: 22px;
     margin-left: 40px;
     font-weight: 400;
 }
 .header{
-    background-color: rgb(250, 250, 250);
-    border: 1px solid rgb(214, 214, 214);
+    background-color: #1E293B;
     height: 60px;
     text-align: start;
     display: flex;
