--- a/src/pages/HomePage/homepage.module.css
+++ b/src/pages/HomePage/homepage.module.css
@@ -1,25 +1,25 @@
 .content{
-    margin-top: 100px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    display: flex;
-    gap: 30px;
+  margin-top: 100px;
+  justify-content: center;
+  align-content: center;
+  display: flex;
+  gap: 30px;
     
 }
 
 section{
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    gap: 30px;
-    max-width: 550px;
+  display: flex;
+  flex-direction: column;
+  background-color: #1E293B;
+  padding: 5px 5px;
+  border-radius: 10px;
 }
 .wrappInputs{
     gap: 10px;
     display: flex;
     flex-direction: column;
+    color: aliceblue;
+
 }
 
 .articles{
@@ -36,6 +36,7 @@ section{
 
 .wrapBtn{
     display: flex; 
+    align-items: center;
 }
 
 .alerts{
